--- a/project/CSS/style.css
+++ b/project/CSS/style.css
@@ -3145,6 +3145,89 @@ transform: scale(1.1);
 text-shadow: 2px 2px 4px rgba(226, 200, 49, 0.642);
 }
 
+/* login  */
+.custom-body-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+
+.logo {
+  margin-right: 20px; /* Adjust spacing between logo and menu */
+  height: 40px; /* Set the desired height of the logo */
+}
+
+.error {
+  color: red;
+}
+
+
+.h1login {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+
+
+.loginform {
+  display: flex;
+  flex-direction: column;
+  width: 550px;
+  padding: 20px;
+  border: 3px solid #ccc;
+  border-radius: 5px;
+  margin-left: 120px;
+}
+
+.lbellogin {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.txtloging {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  margin-bottom: 15px;
+}
+
+input[type="password"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  margin-bottom: 15px;
+}
+
+
+.logingbtn {
+  padding: 10px 20px;
+  background-color: rgb(0, 81, 255);
+  color: white;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
