--- a/project/CSS/style.css
+++ b/project/CSS/style.css
@@ -3218,7 +3218,123 @@ input[type="password"] {
   cursor: pointer;
 }
 
+/* saged edited */
+.tableJ {position: fixed;
+  bottom: 1%;
+  margin: 4px;
+  background-color: rgb(69, 47, 47);
+}
 
+
+
+.thrody {
+  text-align: left;
+}
+
+.tableJ,
+.thrody,
+.tdap {
+  border: 1px solid rgb(249, 245, 245);
+  border-collapse: collapse;
+}
+
+.apbody {
+  color: aliceblue;
+}
+.header-puffin {
+  position: fixed;
+  top:0;
+  width: 100%;
+  z-index: 1000;
+}
+.audiorody{position: fixed;
+  bottom: 270px;}
+  .audiorody::-webkit-media-controls-panel{
+      background-color: rgb(61, 50, 50);
+  }
+  .audiorody::-webkit-media-controls-play-button{
+      background-color: rgb(242, 242, 242);
+      border-radius: 50%;
+  }
+  .audiorody::-webkit-media-controls-current-time-display{
+      color: #ffffff;
+  }
+  .audiorody::-webkit-media-controls-time-remaining-display{
+      color: #fff3f3;
+  }
+  .audiorody::-webkit-media-controls-timeline{
+      border-radius: 40px;
+      background-color: rgb(255, 255, 255);
+  }
+  .audiorody::-webkit-media-controls-volume-slider{
+      background-color: rgb(240, 240, 240);
+      border-radius: 50px;
+      padding-left: 10px;
+      padding-right: 10px;
+  }
+  .audiorody::-webkit-media-controls-mute-button{
+      background-color: rgb(255, 255, 255);
+      border-radius: 50%;
+  }
+  .audiorody::-webkit-media-controls-more-option-button{
+      background-color: #ffffff;
+  }
+
+  .navbarr {
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+.logor {
+    width: 100px;
+    height: auto;
+    margin-right: auto;
+}
+
+.nav-itemr {
+    margin-right: 20px;
+    text-decoration: none;
+    color: #ffffff;
+    transition: color 0.3s ease;
+    font-weight: bold;
+}
+
+.nav-itemr:hover {
+    color: orange;
+}
+
+.search-formr {
+    display: flex;
+    align-items: center;
+}
+
+.search-barr {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 20px;
+}
+
+.search-buttonr {
+    padding: 8px 12px;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #121212;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.search-buttonr:hover {
+    background-color: rgb(255, 145, 0);
+}
+
+.octlabel
+{
+  font-size: 35px;
+  margin: 20px;
+}
 
 
 
